--- a/app/src/main/res/layout/activity_land.xml
+++ b/app/src/main/res/layout/activity_land.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.edu.uniritter.gps.views.GPSActivity">
+    tools:context=".view.LandActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
